# MixA_Money

./: .gitignore  .replit  MixA_Money_repo.md  app.py  models.py  package.json  pyproject.toml  transaction_tracker.py  worker.py
contracts/: MixANFT.sol
contracts/config/: web3Config.js
scripts/: deploy.js
